--- a/_posts/2021-12-20-gile_mard.md
+++ b/_posts/2021-12-20-gile_mard.md
@@ -6,7 +6,7 @@ subtitle: معرفی کتاب گیله مرد
 cover-img: /assets/images/gile_mard.jpg
 thumbnail-img: /assets/images/gile_mard.jpg
 share-img: /assets/images/gile_mard.jpg
-tags: [books, gile_mard, story]
+tags: [کتاب, داستان]
 ---
 
 این کتاب در واقع مجموعه‌ای از 9 داستان کوتاه است که نام یکی از آنها `گیله مرد` است و داستان‌های دیگر نام‌های : «نامه‌ها»، «اجاره خونه»، «دزاشیب»، «یه ره‌نچکا»، «یک زن خوشبخت»، «رسوایی»، «خائن» و «پنج دقیقه پس از دوازده» است.  
