--- a/_posts/2021-12-20-gile_mard.md
+++ b/_posts/2021-12-20-gile_mard.md
@@ -1,8 +1,6 @@
 ---
-layout: post
-full-width: true
 title: گیله مرد
-subtitle: معرفی کتاب گیله مرد
+description: معرفی کتاب گیله مرد
 image: /assets/images/gile_mard.jpg
 tags: [کتاب, داستان]
 ---
