--- a/_posts/2022-10-29-deep_work.md
+++ b/_posts/2022-10-29-deep_work.md
@@ -1,8 +1,6 @@
 ---
-layout: post
-full-width: true
 title: کار عمیق
-subtitle: قوانینی برای تمرکز در دنیای آشفته
+description: قوانینی برای تمرکز در دنیای آشفته
 image: /assets/images/deep_work.jpg
 tags: [کتاب, روانشناسی, موفقیت]
 ---
