--- a/_posts/2023-05-06-the_fall.md
+++ b/_posts/2023-05-06-the_fall.md
@@ -1,8 +1,6 @@
 ---
-layout: post
-full-width: true
 title: سقوط
-subtitle: The Fall
+description: The Fall
 image: /assets/images/the_fall.jpg
 tags: [کتاب, رمان]
 ---
