--- a/_posts/2023-05-30-6410.md
+++ b/_posts/2023-05-30-6410.md
@@ -1,8 +1,6 @@
 ---
-layout: post
-full-width: true
 title: 6410
-subtitle: 6410
+description: 6410
 image: /assets/images/6410.jpg
 tags: [کتاب, زندگینامه, جنگ]
 ---
