--- a/_posts/2024-11-17-triggers.md
+++ b/_posts/2024-11-17-triggers.md
@@ -1,8 +1,6 @@
 ---
-layout: post
-full-width: true
 title: خلق رفتارهای ماندگار
-subtitle: Triggers Creating Behavior That Lasts Becoming the Person You Want to Be
+description: Triggers Creating Behavior That Lasts Becoming the Person You Want to Be
 image: /assets/images/triggers.jpg
 tags: [کتاب, روانشناسی, توسعه فردی]
 ---
