--- a/_posts/2025-07-07-osint.md
+++ b/_posts/2025-07-07-osint.md
@@ -1,8 +1,6 @@
 ---
-layout: post
-full-width: true
 title: اوسینت
-subtitle: Osint
+description: Osint
 image: /assets/images/osint.jpg
 tags: [کتاب, امنیت, کامپیوتر]
 ---
