--- a/_posts/2024-11-17-triggers.md
+++ b/_posts/2024-11-17-triggers.md
@@ -2,7 +2,7 @@
 title: خلق رفتارهای ماندگار
 description: Triggers Creating Behavior That Lasts Becoming the Person You Want to Be
 image: /assets/images/triggers.jpg
-tags: [کتاب, روانشناسی, توسعه فردی]
+tags: [کتاب, روانشناسی, توسعه_فردی]
 ---
 
 ## توضیحات
